--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,8 +1,5 @@
+<% provide(:title, "Customers")%>
 <!DOCTYPE html>
-<head>
-
-</head>
-
 <body>
   <h1>顧客管理</h1>
   <%= link_to "新規登録", "/customers/new" %>
