--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,8 +1,5 @@
+<% provide(:title, "TOP") %>
 <!DOCTYPE html>
-<head>
-
-</head>
-
 <body>
   <h1>製品管理</h1>
   <%= link_to "新規登録", "/products/new" %>
