--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,21 @@
-<% provide(:title,"Customers")%>
-<!DOCTYPE html>
+<% render "/customers/title" %>
+
 <body>
-  <p>顧客登録のページです</p>
+  <h1>顧客管理</h1>
+  <%= form_for(@customer) do |f| %>
+
+  <%= f.label :code %>
+  <%= f.text_field :code %>
+
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.label :address %>
+  <%= f.text_field :address %>
+
+  <%= f.submit "Save" %>
+
+  <%end%>
+
+
 </body>
