--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, "TOP") %>
-<!DOCTYPE html>
-<body>
-  <h1>製品管理</h1>
-  <%= link_to "新規登録", "/products/new" %>
 
-  <%= link_to "顧客管理画面へ", "/customers" %>
+<body>
+  <%= link_to "製品管理", "/products/index" %>
+
+  <%= link_to "顧客管理", "/customers/index" %>
 </body>
